# dev_robotic_arm_engineering

./: .gitignore  README.md  Readme.md  topic.txt
Docs/: Curriculum.md
docs/: Module 1 _ ROS2 Workspace, Simulation, and Arm Model.md  Module 2 _ Joint Control, Calibration, and Forward Kinematics.md  Module 3 _ Inverse Kinematics, Trajectories, and Dynamics Basics.md  Module 4 _ MoveIt 2 Planning and Collision Avoidance.md  Module 5 _ Pick and Place with Fixed Targets.md  Module 6 _ RGB-D Perception, Calibration, and Scene Mapping.md  Module 7 _ Failure Recovery, Logging, and Evaluation.md  Module 8 _ Robot Learning and Language-to-Action Tasking.md  Module_ AGENTS.md  Notes Index.md  Plan.md  new_ideas.md
src/arm_sim_bringup/: CMakeLists.txt  README.md  package.xml
src/arm_sim_bringup/config/: panda_controllers.yaml  stick_arm_controllers.yaml
src/arm_sim_bringup/launch/: panda_gz_control.launch.py  stick_arm_gz_control.launch.py  stick_arm_rviz.launch.py
src/arm_sim_bringup/rviz/: panda.rviz  stick_arm.rviz
src/arm_sim_bringup/urdf/: panda_sim.urdf.xacro  stick_arm_4dof.urdf.xacro
src/motion/: README.md  package.xml  setup.py
src/motion/launch/: demo_01_point_to_point.launch.py  demo_02_straight_line.launch.py  demo_03_circle_bump.launch.py  demo_04_rectangle_shape.launch.py  demo_05_workspace_reject.launch.py  demo_06_moveit_pose_goal.launch.py  demo_07_moveit_arm_hand_pose_goal.launch.py  panda_bringup.launch.py
src/motion/motion/: __init__.py  demo_01_point_to_point.py  demo_02_straight_line.py  demo_03_circle_bump.py  demo_04_rectangle_shape.py  demo_05_workspace_reject.py  demo_06_moveit_pose_goal.py  demo_base.py  panda_kinematics.py  trajectory_utils.py
src/panda/: CMakeLists.txt  README.md  package.xml
src/panda/cmake/environment_hooks/: gz_sim_resource_path.bash  sdf_path.bash
src/panda/config/: controllers_position.yaml  initial_joint_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controller_manager.yaml  moveit_controller_manager_arm_only.yaml  ompl_planning.yaml  panda.srdf  panda.srdf.xacro  servo.yaml
src/panda/launch/: panda_ik_gazebo.launch.py  panda_multi_object_sequence.launch.py  panda_pick_and_place.launch.py  panda_pick_and_place_cubes.launch.py  panda_restricted_chicane.launch.py  panda_restricted_corridor.launch.py  panda_restricted_pillars.launch.py  panda_sim.launch.py  panda_sim_control.launch.py  panda_view.launch.py  panda_vla_pipeline.launch.py
src/panda/panda/: model.sdf
src/panda/rviz/: view_rgbd.rviz
src/panda/scripts/: xacro2sdf.bash  xacro2urdf.bash
src/panda/src/: example_position.cpp
src/panda/urdf/: panda.xacro.urdf
src/panda/worlds/: multi_object_sequential_env.sdf  pick_and_place_cubes_base.sdf  pick_and_place_cubes_env_1.sdf  pick_and_place_cubes_env_2.sdf  restricted_chicane_env.sdf  restricted_corridor_env.sdf  restricted_pillars_env.sdf  simple_pick_and_place_collision.sdf  vla_pipeline_env.sdf
src/pick_place/: CMakeLists.txt  IMPLEMENTATION.md  README.md  objective.txt  package.xml
src/pick_place/config/: params.yaml
src/pick_place/include/pick_place/: gripper_controller.hpp  object_detector.hpp  object_detector_pcl.hpp  pick_place_executor.hpp  pick_place_multi_executor.hpp
src/pick_place/launch/: pick_place_multi_object.launch.py
src/pick_place/pick_place/: implement_py.md
src/pick_place/scripts/: tranforms.py
src/pick_place/src/: object_detector.cpp  object_detector_main.cpp  object_detector_pcl.cpp  object_detector_pcl_main.cpp  pick_place_executor.cpp  pick_place_executor_main.cpp  pick_place_multi_executor.cpp  pick_place_multi_executor_main.cpp
src/segmentation/: CMakeLists.txt  package.xml
src/segmentation/config/: segmentation_params.yaml
src/segmentation/dev_docs/: DEBUGGING_POINTCLOUD_SHIFT.md  MOVEIT_POSE_CONTROLLER.md  PHASE1_PROGRESS.md  PHASE2_PROGRESS.md  PHASE3_PROGRESS.md  README.md  SEGMENTATION_PIPELINE.md
src/segmentation/launch/: moveit_pose_controller.launch.py  segmentation.launch.py
src/segmentation/scripts/: camera_calibration_check.py
src/segmentation/src/: color_segmentation_node.cpp  moveit_pose_controller_node.cpp
src/util/: package.xml  pcd_snapshot.py  setup.cfg  setup.py
